# advent_of_code

2015/day19/: input  solution.exs
2018/day_1/: day-1.ijs  part1-1.clj  part1-1.exs  solution.clj  solution.exs
2018/day_2/: part2-1.exs  part2-2.ijs
2018/day_3/solution/: Cargo.toml
2019/day_1/: solution.ijs
2019/day_10/: Cargo.toml
2019/day_10/src/: main.rs
2019/day_11/: Cargo.toml
2019/day_11/src/: main.rs
2019/day_12/: Cargo.toml
2019/day_13/: Cargo.toml
2019/day_14/: day_14  mix.exs
2019/day_16/: Cargo.toml
2019/day_17/: Cargo.toml  README.md
2019/day_19/: Cargo.toml
2019/day_2/: Cargo.toml
2019/day_21/: Cargo.toml
2019/day_22/: Cargo.toml
2019/day_24/: Cargo.toml
2019/day_25/: Cargo.toml
2019/day_3/: Cargo.toml
2019/day_4/: solution.exs  solution.ijs  solution2.ijs
2019/day_5/: Cargo.toml
2019/day_7/: Cargo.toml
2019/day_8/: solution.ijs
2019/day_9/: Cargo.toml
2020/day_1/: Cargo.toml
2020/day_10/: Cargo.toml
2020/day_11/: Cargo.toml
2020/day_12/: Cargo.toml
2020/day_13/: Cargo.toml
2020/day_14/: Cargo.toml
2020/day_14/src/: main.rs
2020/day_15/: Cargo.toml
2020/day_16/: Cargo.toml
2020/day_18/: Cargo.toml
2020/day_2/: Cargo.toml
2020/day_22/: Cargo.toml
2020/day_3/: Cargo.toml
2020/day_4/: Cargo.toml
2020/day_5/: Cargo.toml
2020/day_6/: Cargo.toml
2020/day_7/: Cargo.toml  mix.exs
2020/day_8/: Cargo.toml
2020/day_8/src/: main.rs  vm.rs
2020/day_9/: Cargo.toml
day_1/: day-1.ijs  part1-2.clj  part1-2.exs
day_1/day1/: CHANGELOG.md  project.clj
day_2/: part2-1.exs
(+55 files in other folders)
