[package]
name = "day_10"
version = "0.1.0"
authors = ["Richard Bowker <richardbowker@monkeygroover.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.7.1"

itertools = "0.8.2"
