[package]
name = "day_14"
version = "0.1.0"
authors = ["Richard Bowker <richardbowker@monkeygroover.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.8"
